# embedded-hal-stubs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  returns.rs
src/blocking/: mod.rs  spi.rs
tests/: spi.rs
